# DifConnect

./: Dockerfile  README.md  requirements.txt  setup.cfg
src/difconnect/: __main__.py  config.py  dif.py  scraper.py
src/websocketsapi/: api.py  diffusion3.js  function1300.js  lab3.js  main.py
