[metadata]
name = difconnect
description = Parse WebSite for data and Connect to Diffusion Server
url = https://github.com/zakharb/difconnect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    difconnect = difconnect.__main__:main